Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our code.

8.6.0 (2025-09-??)
------------------
- ALL: Added a mapping and accompanying UI for the API field "warehousecountry".


8.5.4 (2025-08-16) (none)
8.5.3 (2025-08-09) (none)
-------------------------
- ALL: Added the API field "warehousecountry" to the definition of Invoice.
  No other support for it has been added, but custom code can now use it.
- 8.5.4: Corrected the property name by removing a space from the end.


8.5.2 (2025-07-08) (MA)
-----------------------
- MA: Siel\Acumulus\Magento\Config\ConfigStore::load(): Return value must be of type
  array, null returned.


8.5.1 (2025-05-28) (PS)
-----------------------
Bugs:
- PS: TypeError: Cannot assign string to property Siel\Acumulus\Invoice\Item::$id of type
  int in /modules/acumulus/vendor/siel/acumulus/src/PrestaShop/Invoice/Item.php:30


8.5.0 (2025-04-30) (WC)
-----------------------
Features:
- ALL: Added a setting to set a value for the "disable duplicates" flag to Acumulus as
  part of the invoice-add message.


8.4.3 (2025-03-31) (WC)
-----------------------
Bugs:
- WC: TypeError: FormRenderer::renderLabel(): Argument #1 ($text) must be of type string,
  null given. Als betaalmethodes 'null' als titel hebben (en niet de lege string).


8.4.2 (2025-03-10) (PS|WC)
--------------------------
Bugs:
- ALL: InvalidArgumentException: false is not considered a numeric value in Number.php:155
- PS: Error: Call to undefined method
  Siel\Acumulus\PrestaShop\Invoice\Source::metadataGet() in
  \Siel\Acumulus\PrestaShop\Collectors\PaymentFeeLineCollector::collectPaymentFeeLine:68.


8.4.1 (2025-01-02) (WC)
-----------------------
Bugs:
- ALL: DomainException: lang: not an allowed value: 'de' in AcumulusProperty.php:226.
- ALL: TypeError: CompletorInvoiceLines::getUniqueVatRate(): Argument #1 ($vatRateInfos)